--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button type="button" class="banner-button"> Заказать услугу </button> 
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container features">
             <h2 hidden class="section-title">Наши преимущества</h2>
             <ul class="features">
                 <li class="features-item">
@@ -48,7 +48,7 @@
                     <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
                 </li>
-                <li> 
+                <li class="features-item"> 
                     <h3 class="features-title">Планирование</h3>
                     <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает. </p>
                 </li>
@@ -60,27 +60,26 @@
             </div>
         </section>
         <section class="section">
-          
+            <div class="container works">
             <h2 class="section-title">Чем мы занимаемся</h2>
-            <div class="container">
             <ul class="works">
-                <li class="works-item a">
+                <li class="works-item">
                     <img src="./images/services/img.jpg" alt="работа за ноутбуком" width="370" height="294" />
                 </li>
                 <li class="works-item">
                     <img src="./images/services/box2.jpg" alt="синхронизациятелефона с ноутбуком" width="370" height="294" />
                 </li>
-                <li class="works-item c">
+                <li class="works-item">
                     <img src="./images/services/box3.jpg" alt="выбор цвета" width="370" height="294" />
                 </li>
             </ul>
             </div>
         </section>
         <section class="section">
-        
+            <div class="container team">
             <h2 class="section-title team">Наша команда</h2>
-            <div class="container"></div>
-            <ul class="teams">
+            <ul class="team">
+                <div class="people"> 
                 <li class="team-item">
                     <img src="./images/team/img1.jpg" alt="дизайнер" width="270" height="260" />
                     <h3 class="team-title">Игорь Демьяненко</h3>
@@ -101,24 +100,27 @@
                     <h3 class="team-title"> Михаил Ермаков</h3>
                     <p lang="en" class="team-text">UI Designe</p>
                 </li>
+                </div>
             </ul>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <a href="#" lang="en" class="logo">Web<span class="logo-l">Studio</span></a>
+        <div class="footer-box">
+        <a href="#" lang="en" class="logo-footer">Web<span class="logo-l">Studio</span></a>
         <address>
             <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
             <ul class="footer-contacts">
-                <li>
+                <li class="footer-contacts-link">
                     <a href="" class="footer-contacts-item">info@example.com</a>
                 </li>
-                <li>
+                <li class="footer-contacts-link">
                     <a href="" class="footer-contacts-item">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
