--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li class="item"> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
             </ul>
     </header>
+
 <main>
         <section class="banner"> 
             <h1 class="banner-title"> Эффективные решения <br> для вашего бизнеса </h1>
@@ -77,7 +78,7 @@
         </section>
         <section class="section">
             <div class="container team">
-            <h2 class="section-title team">Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="team">
                 <div class="people"> 
                 <li class="team-item">
@@ -122,5 +123,6 @@
         </address>
         </div>
     </footer>
+
 </body>
 </html>
