--- a/portfolio.html
+++ b/portfolio.html
@@ -15,17 +15,17 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <nav>
+        <nav class="header-nav-logo">
             <a href="./index.html" lang="en" class="logo">Web<span class="logo-d">Studio</span></a>
             <ul class="header-nav">
-                <li><a href="./index.html" class="header-nav-link">Студия</a></li>
-                <li><a href="./portfolio.html" style="color:#2196F3;" class="header-nav-link">Портфолио</a></li>
-                <li><a href="#" class="header-nav-link">Контакты</a></li>
+                <li class="item"><a href="./index.html" class="header-nav-link">Студия</a></li>
+                <li class="item"><a href="./portfolio.html" style="color:#2196F3;" class="header-nav-link">Портфолио</a></li>
+                <li class="item"><a href="#" class="header-nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="header-contacts">
-            <li> <a href="mailto:info@devstudio.com" class="header-contacts-link">info@devstudio.com</a> </li>
-            <li> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
+            <li class="item"> <a href="mailto:info@devstudio.com" class="header-contacts-link">info@devstudio.com</a> </li>
+            <li class="item"> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
         </ul>
     </header>
 
@@ -99,19 +99,21 @@
 </section>
    </main>
 
-     <footer class="footer">
-        <a href="#" lang="en" class="logo">Web<span class="logo-l">Studio</span></a>
-        <address>
-            <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
-            <ul class="footer-contacts">
-                <li>
-                    <a href="" class="footer-contacts-item">info@example.com</a>
-                </li>
-                <li>
-                    <a href="" class="footer-contacts-item">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+    <footer class="footer">
+        <div class="footer-box">
+            <a href="#" lang="en" class="logo-footer">Web<span class="logo-l">Studio</span></a>
+            <address>
+                <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
+                <ul class="footer-contacts">
+                    <li class="footer-contacts-link">
+                        <a href="" class="footer-contacts-item">info@example.com</a>
+                    </li>
+                    <li class="footer-contacts-link">
+                        <a href="" class="footer-contacts-item">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
