Оформление 1.2 стр ( ДЗ 3 )
Сделаны отступы, выравнен текст или элементы вдоль оси. Добавлен фон частично.

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,11 @@
 
    <main>
 <section class="section">
-            <h1 hidden> Портфолио </h1>
-            <ul class="filtr">
-                <li class="filtr-item">
+            <div class="container filtr">
+            <h1 hidden class="section-title"> Портфолио </h1>
+            <div>
+            <ul class="filtr-nav"> 
+                <li class="item">
                     <button type="button" class="filtr-button"> Все </button>
                 </li>
                 <li>
@@ -49,6 +51,7 @@
                     <button type="button" class="filtr-button"> Маркетинг </button>
                 </li>
             </ul>
+            </div>
             <ul class="portfolio">
             <li class="portfolio-item">
                 <img src="./images/allservices/img5.jpg" alt="трое людей" width="370" height="294" />
@@ -96,6 +99,7 @@
                 <p class="portfolio-text">Приложение</p>
             </li>
             </ul>
+            </div>
 </section>
    </main>
 
