--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <!-- Шапка (Хедер)-->
     <header class="header">
+            <div class="container nav">
             <nav class="header-nav-logo">
                 <a href="./index.html" lang="en" class="logo">Web<span class="logo-d">Studio</span></a>
                 <ul class="header-nav">
@@ -30,16 +31,19 @@
                 <li class="item"> <a href="mailto:info@devstudio.com" class="header-contacts-link"> info@devstudio.com</a> </li>
                 <li class="item"> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
             </ul>
+            </div>
     </header>
 
 <main>
         <section class="banner"> 
+            <div class="container">
             <h1 class="banner-title"> Эффективные решения <br> для вашего бизнеса </h1>
             <button type="button" class="banner-button"> Заказать услугу </button> 
+            </div>
         </section>
         <section class="section">
-            <div class="container features">
-            <h2 hidden class="section-title">Наши преимущества</h2>
+            <div class="container">
+                <h2 hidden class="section-title visually-hidden">Наши преимущества</h2>
             <ul class="features">
                 <li class="features-item">
                     <h3 class="features-title">Внимание к деталям</h3>
@@ -58,10 +62,9 @@
                     <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
                 </li>
             </ul>
-            </div>
         </section>
-        <section class="section">
-            <div class="container works">
+        <section class="section works">
+            <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="works">
                 <li class="works-item">
@@ -76,41 +79,46 @@
             </ul>
             </div>
         </section>
-        <section class="section">
-            <div class="container team">
+        <section class="section people">
+            <div class="container">
             <h2 class="section-title">Наша команда</h2>
             <ul class="team">
-                <div class="people"> 
                 <li class="team-item">
                     <img src="./images/team/img1.jpg" alt="дизайнер" width="270" height="260" />
-                    <h3 class="team-title">Игорь Демьяненко</h3>
-                    <p lang="en" class="team-text">Product Designer</p>
+                    <div class="initials">
+                        <h3 class="team-title">Игорь Демьяненко</h3>
+                        <p lang="en" class="team-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-item">
                     <img src="./images/team/img2.jpg" alt="разработчик" width="270" height="260" />
-                    <h3 class="team-title">Ольга Репина</h3>
-                    <p lang="en" class="team-text">Frontend Developer</p>
+                    <div class="initials">
+                        <h3 class="team-title">Ольга Репина</h3>
+                        <p lang="en" class="team-text">Frontend Developer</p>
+                    </div>  
                 </li>
                 <li class="team-item">
                     <img src="./images/team/img3.jpg" alt="маркетолог" width="270" height="260" />
-                    <h3 class="team-title">Николай Тарасов</h3>
-                    <p lang="en" class="team-text">Marketing</p>
+                    <div class="initials">
+                        <h3 class="team-title">Николай Тарасов</h3>
+                        <p lang="en" class="team-text">Marketing</p>
+                    </div>  
                 </li>
                 <li class="team-item">
                     <img src="./images/team/img4.jpg" alt="дизайнер интерфейса" width="270" height="260" />
-                    <h3 class="team-title"> Михаил Ермаков</h3>
-                    <p lang="en" class="team-text">UI Designe</p>
+                    <div class="initials">
+                        <h3 class="team-title"> Михаил Ермаков</h3>
+                        <p lang="en" class="team-text">UI Designe</p>
+                    </div>  
                 </li>
-                </div>
             </ul>
-            </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="footer-box">
+        <div class="container footer">
         <a href="#" lang="en" class="logo-footer">Web<span class="logo-l">Studio</span></a>
-        <address>
+        <address class="address">
             <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
             <ul class="footer-contacts">
                 <li class="footer-contacts-link">
