--- a/portfolio.html
+++ b/portfolio.html
@@ -15,88 +15,106 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <nav class="header-nav-logo">
-            <a href="./index.html" lang="en" class="logo">Web<span class="logo-d">Studio</span></a>
-            <ul class="header-nav">
-                <li class="item"><a href="./index.html" class="header-nav-link">Студия</a></li>
-                <li class="item"><a href="./portfolio.html" style="color:#2196F3;" class="header-nav-link">Портфолио</a></li>
-                <li class="item"><a href="#" class="header-nav-link">Контакты</a></li>
+        <div class="container nav">
+            <nav class="header-nav-logo">
+                <a href="./index.html" lang="en" class="logo">Web<span class="logo-d">Studio</span></a>
+                <ul class="header-nav">
+                    <li class="item"><a href="./index.html" class="header-nav-link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" style="color:#2196F3;" class="header-nav-link">Портфолио</a></li>
+                    <li class="item"><a href="#" class="header-nav-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="header-contacts">
+                <li class="item"> <a href="mailto:info@devstudio.com" class="header-contacts-link"> info@devstudio.com</a> </li>
+                <li class="item"> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
             </ul>
-        </nav>
-        <ul class="header-contacts">
-            <li class="item"> <a href="mailto:info@devstudio.com" class="header-contacts-link">info@devstudio.com</a> </li>
-            <li class="item"> <a href="tel:+380961111111" class="header-contacts-link">+38 096 111 11 11</a> </li>
-        </ul>
+        </div>
     </header>
 
    <main>
 <section class="section">
-            <div class="container filtr">
-            <h1 hidden class="section-title"> Портфолио </h1>
-            <div>
+            <div class="container">
+            <h1 hidden class="section-title visually-hidden"> Портфолио </h1>
             <ul class="filtr-nav"> 
-                <li class="item">
+                <li class="filtr-item">
                     <button type="button" class="filtr-button"> Все </button>
                 </li>
-                <li>
+                <li class="filtr-item">
                     <button type="button" class="filtr-button"> Веб-сайты </button>
                 </li>
-                <li>
+                <li class="filtr-item">
                     <button type="button" class="filtr-button"> Приложения </button>
                 </li>
-                <li>
+                <li class="filtr-item"> 
                     <button type="button" class="filtr-button"> Дизайн </button>
                 </li>
-                <li>
+                <li class="filtr-item">
                     <button type="button" class="filtr-button"> Маркетинг </button>
                 </li>
             </ul>
-            </div>
             <ul class="portfolio">
             <li class="portfolio-item">
                 <img src="./images/allservices/img5.jpg" alt="трое людей" width="370" height="294" />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+                <div class="port-title">
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/allservices/img6.jpg" alt="ддвое парнейиграют в баскетбол" width="370" height="294" />
+                <div class="port-title">
                 <h2 class="portfolio-title">Постер <span lang="en"> New Orlean vs Golden Star </span> </h2>
                 <p class="portfolio-text">Дизайн</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/allservices/img7.jpg" alt="логотип с рыбой" width="370" height="294" />
+                <div class="port-title">
                 <h2 class="portfolio-title">Ресторан <span lang="en"> Seafood </span> </h2>
                 <p class="portfolio-text">Приложение</p>
+                </div>
             </li>
             <li class="portfolio-item">
-                <img src="./images/allservices/img8.jpg" alt="наушники" width="270" height="260" />
+                <img src="./images/allservices/img8.jpg" alt="наушники" width="370" height="294" />
+                <div class="port-title">
                 <h2 class="portfolio-title">Проект <span lang="en"> Prime </span> </h2>
                 <p class="portfolio-text">Маркетинг</p>
+                </div>
             </li> 
             <li class="portfolio-item">
-                <img src="./images/allservices/img9.jpg" alt="две коробки" width="270" height="260" />
+                <img src="./images/allservices/img9.jpg" alt="две коробки" width="370" height="294" />
+                <div class="port-title">
                 <h2 class="portfolio-title">Проект <span lang="en"> Boxes </span> </h2>
                 <p class="portfolio-text">Приложение</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/allservices/img10.jpg" alt="монитор с картой мира" width="370" height="294" />
+                <div class="port-title">
                 <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-text">Веб-сайт</p>
+                </div>
             </li>
             <li class="portfolio-item">
                 <img src="./images/allservices/img11.jpg" alt="журнал" width="370" height="294" />
-                <h2 class="portfolio-title"> Издание <span lang="en"> Inspiration has no Borders </span> </h2>
+                <div class="port-title">
+                <h2 class="portfolio-title"> Издание <span lang="en"> Limited Edition </span> </h2>
                 <p class="portfolio-text">Дизайн</p>
+                </div>
             </li>
             <li class="portfolio-item">
-                <img src="./images/allservices/img12.jpg" alt="этикетка" width="270" height="260" />
+                <img src="./images/allservices/img12.jpg" alt="этикетка" width="370" height="294" />
+                <div class="port-title">
                 <h2 class="portfolio-title">Проект <span lang="en"> LAB </span> </h2>
                 <p class="portfolio-text">Маркетинг</p>
+                </div>
             </li>
             <li class="portfolio-item">
-                <img src="./images/allservices/img13.jpg" alt="работанадноутбуком" width="270" height="260" />
+                <img src="./images/allservices/img13.jpg" alt="работанадноутбуком" width="370" height="294" />
+                <div class="port-title">
                 <h2 lang="en" class="portfolio-title"> Growing Business </h2>
                 <p class="portfolio-text">Приложение</p>
+                </div>
             </li>
             </ul>
             </div>
@@ -104,9 +122,9 @@
    </main>
 
     <footer class="footer">
-        <div class="footer-box">
+        <div class="container footer">
             <a href="#" lang="en" class="logo-footer">Web<span class="logo-l">Studio</span></a>
-            <address>
+            <address class="address">
                 <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
                 <ul class="footer-contacts">
                     <li class="footer-contacts-link">
