--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="section works">
             <div class="container">
@@ -112,6 +113,7 @@
                     </div>  
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
