--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer">
+        <div class="container">
         <a href="#" lang="en" class="logo-footer">Web<span class="logo-l">Studio</span></a>
         <address class="address">
             <p class="footer-address"> г. Киев, пр-т Леси Украинки, 26 </p>
